# TrustDNN

./: CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml
config/: safednn.yml.example
config/benchmarks/: deepinfer_artifacts.json  trustbench.json
config/tools/: deepinfer.json  prophecy.json  selfchecker.json
safednn/: main.py
safednn/controllers/: base.py  evaluate.py  execute.py
safednn/core/: evaluation.py  exc.py  objects.py  plotter.py
safednn/core/dataset/: __init__.py  base.py  csv.py  npy.py
safednn/core/split/: __init__.py  base.py  csv.py  npy.py
safednn/handlers/: benchmark.py  instance.py  plugin.py  tool.py
safednn/plugins/: deepinfer.py  deepinfer_artifacts.py  prophecy.py  selfchecker.py  trustbench.py
tests/: test_safednn.py
trustdnn/: main.py
trustdnn/controllers/: base.py  evaluate.py  execute.py
trustdnn/core/: exc.py  interfaces.py  model.py  objects.py  plotter.py
trustdnn/core/dataset/: __init__.py  base.py
trustdnn/core/split/: __init__.py  base.py  csv.py  npy.py
trustdnn/handlers/: benchmark.py  instance.py  plugin.py  tool.py
trustdnn/plugins/: deepinfer.py  deepinfer_artifacts.py  prophecy.py  selfchecker.py  trustbench.py
